--- a/src/main/resources/static/css/front/style.css
+++ b/src/main/resources/static/css/front/style.css
@@ -16,5 +16,18 @@ input[type='text'],
 input[type='number'],
 input[type='password'],
 input[type='email'],
-input[type='date'] { border: 1px solid #d5d5d5; width: 100%; height: 45ps; padding: 0 10px; border-radius: 3px; }
+input[type='date'] { border: 1px solid #d5d5d5; width: 100%; height: 45px; padding: 0 10px; border-radius: 3px; }
+
+/** 기본 스타일 - 체크 박스, 라디오 버튼 */
+input[type='checkbox'] { display: none; }
+input[type='checkbox']+label { min-height: 32px; line-height: 1; padding: 3px 0 3px 33px;
+ background: url("../../images/chk-off.png") no-repeat left center; }
+input[type='checkbox']:checked+label { background: url("../../images/chk-on.png") no-repeat left center; }
+
+input[type='radio'] { display: none; }
+input[type='radio']+label { min-height: 24px; line-height: 1; padding: 3px 0 3px 25px;
+ background: url("../../images/radio-off.png") no-repeat left center; }
+input[type='radio']:checked+label { background: url("../../images/radio-on.png") no-repeat left center; }
+
+.dn { display: none !important; }
 
